[package]
name = "projectrtp"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
bytes = "1"
parking_lot = "0.12"
crossbeam = "0.8"
crc32fast = "1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
dirs = "5"
webrtc-dtls = "0.12"
webrtc-srtp = "0.17"
webrtc-util = "0.11"
async-trait = "0.1"
serde_json = "1"
ezk-g722 = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
